attempt to fix scrollbar behavior in IE

--- a/public/styles/dashboard.less
+++ b/public/styles/dashboard.less
@@ -3,6 +3,7 @@
 .dashboard {
     background: #ececec;
     overflow-y: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 
     .edit-button {
         background-color: #2980b9;
